# rust-massive-parser

./: .gitignore  Cargo.toml  INTEGRATION.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml  coverage.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: csv_main.rs  json_main.rs  main.rs  txt_main.rs
crates/csv-parser/: Cargo.toml  README.md
crates/csv-parser/benches/: csv_bench.rs
crates/csv-parser/src/: lib.rs
crates/csv-parser/tests/: csv_parser.rs
crates/json-parser/: Cargo.toml  INTEGRATION.md  README.md  bench.rs
crates/json-parser/benches/: bench.rs  bench_trivial.rs
crates/json-parser/src/: bench_convert_and_parse.rs  bench_manual.rs  convert_to_jsonl.rs  convert_to_jsonl_mod.rs  lib.rs
crates/json-parser/tests/: json_parser.rs
crates/parser-core/: Cargo.toml  README.md
crates/parser-core/src/: lib.rs
crates/txt-parser/: Cargo.toml  README.md
crates/txt-parser/benches/: bench.rs
crates/txt-parser/src/: lib.rs
crates/txt-parser/tests/: integration.rs
criterion-test/: Cargo.toml
criterion-test/benches/: bench_trivial.rs
