[package]
name = "json-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
anyhow = "1.0"
simd-json = { version = "0.15.1", features = ["serde_impl"] }
parser-core = { path = "../parser-core" }

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.20.0"
