[package]
name = "json-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.5"
rayon = "1.7"
anyhow = "1.0"
simd-json = { version = "0.13", features = ["serde_impl"] }
parser-core = { path = "../parser-core" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
